fix screenshots size on mobile

--- a/gcompris.css
+++ b/gcompris.css
@@ -309,13 +309,41 @@ h3.carousel-text {
   .extraDlLink {
     padding-right: 20px;
   }
+  .screenshotImg {
+    padding-left: 75px;
+    width: 375px;
+    height: 195px;
+  }
+  .screenshotIcon {
+    width: 75px;
+    height: 75px;
+  }
+  .screenshotStar {
+    position: absolute;
+    left: 375px;
+    top: 10px;
+    width: 45px;
+    height: 45px;
+  }
+  .screenshotPay {
+    position: absolute;
+    left: 250px;
+    top: 50px;
+    width: 35px;
+    height: 35px;
+  }
+  .screenshotDivAuthor {
+    width: 375px;
+  }
 }
+
 
 /* Landscape phones
 ------------------------- */
 @media (max-width: 480px) {
     .screenshotImg {
-	width: 200px;
+    padding-left: 50px;
+	width: 250px;
 	height: 130px;
     }
     .screenshotIcon {
@@ -324,14 +352,14 @@ h3.carousel-text {
     }
     .screenshotStar {
 	position: absolute;
-	left: 195px;
+	left: 250px;
 	top: 10px;
 	width: 30px;
 	height: 30px;
     }
     .screenshotPay {
 	position: absolute;
-	left: 195px;
+	left: 250px;
 	top: 50px;
 	width: 23px;
 	height: 23px;
